# stereo_paragram_optimizer

./: CMakeLists.txt  Mobocular.cpp  README.md  代码记录.txt
001_result/: 单相机参数-结果记录.txt
config/: EuRoC.yaml  zhijiang.yaml
include/: BA.h  ORBextractor.h  Optimizer.h
src/: BA.cc  ORBextractor.cc  Optimizer.cc
